fix: scrollbar-gutter issue

--- a/frontend-nextjs/src/styles/global.css
+++ b/frontend-nextjs/src/styles/global.css
@@ -6,6 +6,7 @@
 	html {
 		font-size: clamp(0.88rem, 0.282353vi + 0.81rem, 1rem);
 		line-height: calc(2px + 2ex + 2px);
+		scrollbar-gutter: stable;
 	}
 
 	::-moz-selection,
